Show official Python client

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <td><code>cpanm App::tldr</code></td>
           </tr>
           <tr>
-            <td><a href="https://github.com/lord63/tldr.py">Python client</a></td>
-            <td><code>pip install tldr.py</code></td>
+            <td><a href="https://github.com/tldr-pages/tldr-python-client">Python client</a></td>
+            <td><code>pip install tldr</code></td>
           </tr>
           <tr>
             <td><a href="https://github.com/tldr-pages/tldr-cpp-client">C++ client</a></td>
